# plan-forge

./: .gitignore  LICENSE  MANIFESTO.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: GAPS.md  LESSONS-RETRO.md  PROJECT.md  R1-REVIEW-SUMMARY.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  T07-SUBSPEC.md  T08-SUBSPEC.md  T09-SUBSPEC.md  T10-SUBSPEC.md  T11-SUBSPEC.md  T12-SUBSPEC.md  T13-SUBSPEC.md  T14-SUBSPEC.md  T16-SUBSPEC.md  T17-SUBSPEC.md  T20-SUBSPEC.md  T21-SUBSPEC.md  T22-SUBSPEC.md  T23-SUBSPEC.md  T24-SUBSPEC.md  config.json  plan-forge-v0.1-PLAN.md
eval/host_search/: README.md  report.json  report.md  runner.py
migrations/: env.py
migrations/versions/: 0001_llm_cache.py  0002_corpus_schema.py
src/plan_forge/: __init__.py  api.py  parser.py  verdict.py
tests/: conftest.py
tests/fixtures/: f10_fp.md  f10_tp.md  f11_fp.md  f11_tp.md  f12_fp.md  f12_tp.md  f13_fp.md  f13_tp.md  f14_fp.md  f14_tp.md  f15_fp.md  f15_tp.md  f1_fail.md  f1_pass.md  f2_fail.md  f2_heading_fp.md  f2_pass.md  f2_signoff_fp.md  f2_structural_fp.md  f3_cross_ref_fires.md  f3_date_nofire.md  f3_dedup_fp.md  f3_fail.md  f3_own_id_fp.md  f3_pass.md  f3_phase10_cross_ref.md  f3_phase10_own_id_fp.md  f3_phase_text_fp.md  f3_self_ref.md  f4_fail.md  f4_pass.md  f5_fail.md  f5_pass.md  f6_fail.md  f6_pass.md  f7_fail.md  f7_pass.md  f8_claim_in_code_block.md  f8_claim_mock_evidence.md  f8_claim_real_evidence.md  (+54 more)
tests/integration/: test_api_check_e2e.py  test_api_mechanical_e2e.py  test_cli_audit.py  (+13 more)
tools/: abandon.py  outcomes_cli.py  retroactive_audit.py
(+182 files in other folders)
